Test: deubg syntax fix #2.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,20 +100,19 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          RESP="$(curl -sS -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "$ACTIONS_ID_TOKEN_REQUEST_URL?audience=sts.amazonaws.com")"
-          TOKEN="$(python - <<'PY' <<<"$RESP"
-          import sys, json
-          print(json.load(sys.stdin)["value"])
+          tok="$(python - <<'PY'
+          import os, json, urllib.request
+          url = os.environ['ACTIONS_ID_TOKEN_REQUEST_URL'] + '?audience=sts.amazonaws.com'
+          req = urllib.request.Request(url, headers={'Authorization': 'Bearer ' + os.environ['ACTIONS_ID_TOKEN_REQUEST_TOKEN']})
+          with urllib.request.urlopen(req) as r:
+          print(json.load(r)['value'])
           PY
           )"
-          PAYLOAD="$(python - "$TOKEN" <<'PY'
-          import sys, base64
-          t=sys.argv[1]
-          print(base64.urlsafe_b64decode(t.split('.')[1] + '==').decode())
-          PY
-          )"
-          echo "$PAYLOAD"
+          echo "OIDC claims (payload):"
+          PAY="$(echo "$tok" | cut -d. -f2)"
+          # pad + decode URL-safe base64
+          missing=$(( (4 - ${#PAY} % 4) % 4 )); PAD=$(printf '=%.0s' $(seq 1 $missing))
+          echo "${PAY}${PAD}" | tr '_-' '/+' | base64 -d 2>/dev/null || true
       #TEMP DEBUG
       - uses: aws-actions/configure-aws-credentials@v4
         with:
