--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,22 +95,6 @@ jobs:
     permissions: { id-token: write, contents: read }
     steps:
       - uses: actions/checkout@v4
-      #TEMP DEBUG
-      - name: Debug OIDC claims (test)
-        shell: bash
-        run: |
-          python - <<'PY'
-          import os, json, urllib.request, base64
-          url = os.environ['ACTIONS_ID_TOKEN_REQUEST_URL'] + '?audience=sts.amazonaws.com'
-          req = urllib.request.Request(url, headers={'Authorization':'Bearer ' + os.environ['ACTIONS_ID_TOKEN_REQUEST_TOKEN']})
-          r = urllib.request.urlopen(req)
-          tok = json.load(r)['value']
-          r.close()
-          payload_b64 = tok.split('.')[1]
-          payload = json.loads(base64.urlsafe_b64decode(payload_b64 + '==').decode())
-          print(json.dumps(payload, indent=2, sort_keys=True))
-          PY
-      #TEMP DEBUG
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TEST }}
@@ -193,6 +177,10 @@ jobs:
           import sys
           print(json.dumps(json.loads(base64.urlsafe_b64decode(payload+'==')), indent=2))
           PY
+      - name: Sanity-print target role (masked)
+        run: |
+          ARN="${{ secrets.AWS_ROLE_PROD }}"
+          echo "Using role: ${ARN%:*}:****:${ARN##*:}"  # shows account + role name, hides middle
       #END TEMP DEBUG
       - uses: aws-actions/configure-aws-credentials@v4
         with:
