--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,14 @@
 name: deploy
 on:
   push:
-    branches: [ main ]
+    branches: [ '**' ]
 
 env:
   AWS_REGION: us-east-1
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   deploy-infra-eng:
@@ -89,6 +93,7 @@ jobs:
         run: node tests/e2e/test-visitor-count.js "https://${{ steps.get_domain.outputs.domain }}"
 
   deploy-infra-test:
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: deploy-frontend-eng
     environment: test   # approvals configured in GitHub
     runs-on: ubuntu-latest
@@ -109,6 +114,7 @@ jobs:
           make deploy-infra ENV=test
 
   deploy-frontend-test:
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: deploy-infra-test
     environment: test
     runs-on: ubuntu-latest
@@ -157,6 +163,7 @@ jobs:
         run: node tests/e2e/test-visitor-count.js "https://${{ steps.get_domain.outputs.domain }}"
 
   deploy-infra-prod:
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: deploy-frontend-test
     environment: prod   # approvals configured in GitHub
     runs-on: ubuntu-latest
@@ -177,6 +184,7 @@ jobs:
           make deploy-infra ENV=prod
 
   deploy-frontend-prod:
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: deploy-infra-prod
     environment: prod
     runs-on: ubuntu-latest
