--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
             --parameter-overrides EnvironmentName=eng OrgId=${{ secrets.ORG_ID }} DeployRolePattern='GitHubActionsDeployer' \
             --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM \
             --resolve-s3
+            --no-fail-on-empty-changeset
 
       # 2) Only on main: now that the ENG stack exists, package the template
       - name: Package SAM template by SHA (ENG, main only)
