--- a/resume-infra/template.yaml
+++ b/resume-infra/template.yaml
@@ -67,44 +67,38 @@ Resources:
             NoncurrentVersionExpiration:
               NoncurrentDays: 30
 
-  PromotionArtifactsBucketPolicy:
-    Type: AWS::S3::BucketPolicy
-    Condition: IsEng                 # <— policy only when bucket exists
-    Properties:
-      Bucket: !Ref PromotionArtifactsBucketCentral
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          # Allow any account in my Org, **only** when assuming our deploy role,
-          # to list/get artifact objects under <AppPrefix>/
-          - Sid: AllowOrgReadForDeployRole
-            Effect: Allow
-            Principal: "*"
-            Action:
-              - s3:ListBucket
-              - s3:GetObject
-            Resource:
-              - !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}
-              - !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}/${AppPrefix}/*
-            Condition:
-              StringEquals:
-                aws:PrincipalOrgID: !Ref OrgId
-              ArnLike:
-                aws:PrincipalArn: !Sub "arn:aws:sts::*:assumed-role/${DeployRolePattern}/*"
-
-          # ENG account root can fully manage its own promo bucket (optional but handy)
-          - Sid: AllowEngAccountRW
-            Effect: Allow
-            Principal:
-              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
-            Action:
-              - s3:ListBucket
-              - s3:GetObject
-              - s3:PutObject
-              - s3:DeleteObject
-            Resource:
-              - !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}
-              - !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}/*
+PromotionArtifactsBucketPolicy:
+  Type: AWS::S3::BucketPolicy
+  Condition: IsEng
+  Properties:
+    Bucket: !Ref PromotionArtifactsBucketCentral
+    PolicyDocument:
+      Version: "2012-10-17"
+      Statement:
+        - Sid: AllowOrgReadForDeployRole
+          Effect: Allow
+          Principal: "*"
+          Action:
+            - s3:ListBucket   # required on the bucket itself
+          Resource:
+            - !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}
+          Condition:
+            StringEquals:
+              aws:PrincipalOrgID: !Ref OrgId
+            ArnLike:
+              aws:PrincipalArn: !Sub "arn:aws:sts::*:assumed-role/${DeployRolePattern}/*"
+        - Sid: AllowOrgGetObjectForDeployRole
+          Effect: Allow
+          Principal: "*"
+          Action:
+            - s3:GetObject   # required for objects
+          Resource:
+            - !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}/${AppPrefix}/*
+          Condition:
+            StringEquals:
+              aws:PrincipalOrgID: !Ref OrgId
+            ArnLike:
+              aws:PrincipalArn: !Sub "arn:aws:sts::*:assumed-role/${DeployRolePattern}/*"
 
   LandingPage:
     Type: AWS::S3::Bucket
