--- a/resume-infra/template.yaml
+++ b/resume-infra/template.yaml
@@ -27,7 +27,15 @@ Parameters:
   AppPrefix:                      # <— new (used in the policy path)
     Type: String
     Default: cloud-resume-infra
-
+  # NEW: explicit cross-account principals for promo bucket reads
+  TestDeployRoleArn:
+    Type: String
+    Default: ""
+    Description: "ARN of the GitHub deploy role in TEST (reader of promo bucket)"
+  ProdDeployRoleArn:
+    Type: String
+    Default: ""
+    Description: "ARN of the GitHub deploy role in PROD (reader of promo bucket)"
   # --- NEW: pass from workflow (no SSM required) ---
   OrgId:
     Type: String
@@ -46,17 +54,12 @@ Resources:
   # --- Resources ---
   PromotionArtifactsBucketCentral:
     Type: AWS::S3::Bucket
-    Condition: IsEng                 # <— ensure only created in ENG
+    Condition: IsEng
     Properties:
       BucketName: !Sub cloud-resume-promo-central-${AWS::AccountId}
       OwnershipControls:
         Rules:
           - ObjectOwnership: BucketOwnerEnforced
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
       VersioningConfiguration:
         Status: Enabled
       LifecycleConfiguration:
@@ -75,25 +78,25 @@ Resources:
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
-          # Let any principal in *my AWS Organization* list the bucket
-          - Sid: AllowOrgList
+          # List is bucket-level; allow TEST/PROD deploy roles
+          - Sid: AllowListFromTestProd
             Effect: Allow
-            Principal: "*"
+            Principal:
+              AWS:
+                - !Ref TestDeployRoleArn
+                - !Ref ProdDeployRoleArn
             Action: s3:ListBucket
             Resource: !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}
-            Condition:
-              StringEquals:
-                aws:PrincipalOrgID: !Ref OrgId
 
-          # Let any principal in my Org read objects under the app prefix
-          - Sid: AllowOrgGetObjects
+          # GetObject for packaged.yaml + any future objects under your prefix
+          - Sid: AllowGetObjectsFromTestProd
             Effect: Allow
-            Principal: "*"
+            Principal:
+              AWS:
+                - !Ref TestDeployRoleArn
+                - !Ref ProdDeployRoleArn
             Action: s3:GetObject
             Resource: !Sub arn:aws:s3:::${PromotionArtifactsBucketCentral}/${AppPrefix}/*
-            Condition:
-              StringEquals:
-                aws:PrincipalOrgID: !Ref OrgId
 
   LandingPage:
     Type: AWS::S3::Bucket
